# recommendation-system

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  recommendation-system-catboost.ipynb  requirements.txt
model/: control
notebooks/: recommendation-system-catboost.ipynb
src/: ch.py  model_conn.py
